vsaas-kubernetes/kube-testing-pods/dnsutils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: default
spec:
  containers:
  - name: dnsutils
    image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
    command: 
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
