vsaas-kubernetes/kube-testing-pods/host-networking-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-debug
  namespace: mongodb
spec:
  hostNetwork: true
  containers:
  - name: dns-debug
    image: nicolaka/netshoot
    command:
      - sleep
      - "3600"
  dnsPolicy: ClusterFirstWithHostNet
