vsaas-kubernetes/kube-testing-pods/network-diagnostic.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: network-diagnostic
  namespace: vsaas-dev
spec:
  containers:
  - name: network-diagnostic
    image: nicolaka/netshoot
    command:
      - sleep
      - "3600"
    securityContext:
      privileged: true
  dnsPolicy: ClusterFirst
  restartPolicy: Always
